# Absolut-test

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.deps.dev.yml  compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
etc/docker/: Dockerfile  Dockerfile.dev
src/: .env.example  conftest.py
src/apps/common/: admin.py  exceptions.py  models.py
src/apps/common/services/: emails_sending.py  file_uploadings.py
src/apps/common/tests/: test_choices.py  test_emails_sending.py  test_exceptions.py  test_file_uploadings.py  test_models.py  test_urls.py
src/apps/questionnaires/: admin.py  apps.py  models.py  services.py
src/apps/questionnaires/migrations/: 0001_initial.py  0002_initial.py
src/apps/questionnaires/tests/: factories.py  test_models.py  test_services.py
src/apps/questions/: admin.py  apps.py  models.py  services.py  signals.py
src/apps/questions/migrations/: 0001_initial.py
src/apps/questions/tests/: factories.py  test_models.py  test_services.py  test_signals.py
src/apps/results/: admin.py  models.py  services.py
src/apps/results/migrations/: 0001_initial.py  0002_initial.py
src/apps/results/tests/: factories.py  test_models.py  test_services.py
src/apps/users/: admin.py  choices.py  managers.py  models.py  services.py
src/apps/users/migrations/: 0001_initial.py  0002_user_role.py
src/apps/users/tests/: factories.py  test_managers.py  test_services.py
src/django_project/: celery.py  urls.py
src/django_project/settings/: __init__.py  auth.py  cache.py  celery.py  common.py  database.py  email.py  i18n.py  installed_apps.py  rest_framework.py  sentry.py  simple_jwt.py  storage.py  tz.py
src/services/api/: urls.py
src/services/api/auth/: serializers.py  urls.py  views.py
src/services/api/auth/tests/: test_refresh.py  test_serializers.py  test_signin.py  test_signup.py
src/services/api/questionnaires/: permissions.py  serializers.py  urls.py  views.py
src/services/api/questionnaires/tests/: test_questionnaires.py
src/services/api/questions/: permissions.py  serializers.py  urls.py  utils.py  views.py
src/services/api/questions/tests/: test_options.py  test_questions.py
src/services/api/results/: permissions.py  serializers.py  urls.py  views.py
src/services/api/results/tests/: test_stats.py  test_taking.py
src/services/api/users/: serializers.py  urls.py  views.py
src/services/api/users/tests/: test_list.py  test_me.py
src/services/celery_tasks/tests/: test_dummy.py
src/services/jwt_extensions/: services.py
src/services/jwt_extensions/tests/: test_token_service.py
