[project]
name = "Sbsolut-test"
version = "0.1.0"
description = "Django + DRF synchronous API service"
requires-python = "==3.14.*"
dynamic = ["dependencies"]
[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
django = "==6.0.6"
djangorestframework = "==3.17.1"
drf-spectacular = {version = "==0.29.0", extras = ["sidecar"]}
psycopg = {version = "==3.3.4", extras = ["binary"]}
django-split-settings = "==1.3.2"
django-environ = "==0.12.0"
sentry-sdk = "==2.63.0"
celery = "==5.6.3"
redis = "==8.0.1"
gunicorn = "==26.0.0"
djangorestframework-simplejwt = "^5.5.1"

[tool.poetry.group.dev.dependencies]
ruff = "==0.15.19"
mypy = "==2.1.0"
django-stubs = "==6.0.6"
djangorestframework-stubs = "==3.17.0"
celery-types = "==0.26.0"
pre-commit = "==4.6.0"
pytest = "==9.1.1"
pytest-django = "==4.12.0"
pytest-cov = "^7.1.0"
faker = "==40.23.0"
factory-boy = "==3.3.3"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# --- RUFF (Linter & Formatter) ---
[tool.ruff]
line-length = 79
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "TC",  # flake8-type-checking
]
ignore = []

[tool.ruff.lint.extend-per-file-ignores]
"**/migrations/**.py" = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
exclude = ["**/migrations/**.py"]

# --- MYPY (Type Checking) ---
[tool.mypy]
python_version = "3.14"
plugins = ["mypy_django_plugin.main"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
enable_error_code = ["explicit-override"]
mypy_path = "src"

[tool.django-stubs]
django_settings_module = "django_project.settings"

# Ignoring errors in specific modules and tests
[[tool.mypy.overrides]]
module = [
    "apps.*.migrations.*",
    "apps.*.tests.*",
    "services.*.tests.*",
    "services.*.conftest",
    "conftest",
]
ignore_errors = true

# --- PYTEST ---
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_project.settings"
python_files = ["test_*.py"]
addopts = "--cov --cov-report=term-missing"

# --- COVERAGE (pytest-cov) ---
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/conftest.py",
    "*/settings/*",
    "src/manage.py",
    "*/asgi.py",
    "*/wsgi.py",
    "src/django_project/celery.py",
    "src/django_project/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
